spacing and breakpoint fixed

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -197,7 +197,7 @@ body{
     }
 }
 
-@media screen and (max-width:584px){
+@media screen and (max-width:992px){
     .main{
         margin-top: 25px;
         .title{
