--- a/scss/thankyou.scss
+++ b/scss/thankyou.scss
@@ -192,7 +192,7 @@
         background-color: #f54131;
     }
 }
-@media screen and (max-width:584px){
+@media screen and (max-width:992px){
     .newest-content{
         .title{
             font-size: 1.3rem!important;
